--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="1r.js"></script> -->
-    <script src="NaiveBayes.js"></script>
+    <script src="1r.js"></script>
+    <!-- <script src="NaiveBayes.js"></script> -->
 </body>
 </html>
